# r8s

./: CHANGELOG.md  README.md  pytest.ini  pytest_docker.ini  r8s-oas30.json  tox.ini
docker/: .dockerignore  Dockerfile  __version__.py  executor.py  requirements-dev.txt  requirements.txt
docs/: access_matrix.md  architecture.md  data_flows.md  executor_mocked_data.md  executor_tests.md  license_manager_configuration.md  maestro_integration_contract.md  reference.md  (+1 more)
r8s/: CHANGELOG.md  README.md  __version__.py  api_module.json  pyproject.toml  setup.py
r8s/r8s_group/: __init__.py  algorithm.py  application.py  application_dojo.py  application_licenses.py  application_policies.py  job.py  license.py  parent.py  parent_dojo.py  parent_licenses.py  parent_shaperule.py  policy.py  r8s.py  recommendation.py  report.py  role.py  setting.py  setting_config.py  setting_lm_client.py  setting_lm_config.py  shape.py  shape_price.py  shape_rule.py  storage.py  user.py
r8s/r8s_service/: __init__.py  adapter_client.py  config.py  constants.py  exception.py  initializer.py  logger.py
r8s/r8scli/group/: __init__.py  algorithm.py  application.py  application_dojo.py  application_licenses.py  application_policies.py  job.py  license.py  parent.py  parent_dojo.py  parent_group.py  parent_shaperule.py  policy.py  r8s.py  recommendation.py  report.py  role.py  setting.py  setting_client.py  setting_config.py  shape.py  shape_price.py  storage.py  user.py
r8s/r8scli/service/: adapter_client.py  config.py  constants.py  initializer.py  local_response_processor.py
src/: main.py  (+2 more)
(+290 files in other folders)
