[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "r8scli"
description = "Rule engine CLI"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "click==7.1.2",
    "prettytable==3.9.0",
    "python-dateutil==2.8.2",
    "modular-cli-sdk[hvac]==2.0.0",
    "requests==2.32.3"
]

[project.scripts]
r8s = "r8scli.group.r8s:r8s"

[tool.setuptools.dynamic]
version = {attr = "r8scli.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["r8scli*"]
namespaces = false

[tool.pyright]
include = ["r8scli"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
