[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "r8scli"
description = "Rightsizer CLI"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "click==8.3.0",
    "prettytable==3.9.0",
    "python-dateutil==2.9.0.post0",
    "modular-cli-sdk[hvac]==3.1.1",
    "requests>=2.31.0,<3.0.0"
]

[project.scripts]
r8s = "r8scli.group.r8s:r8s"

[tool.setuptools.dynamic]
version = {attr = "r8scli.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["r8scli*"]
namespaces = false

[tool.pyright]
include = ["r8scli"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
